--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="header-top">
+        <div class="flexible">
+            <div class="hBoder">
+                <h1>Stay Focused on </h1>
+                <h1><span>Mission 2022</span></h1>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, inventore autem debitis praesentium placeat deleniti exercitationem velit amet dicta ullam alias, minima quibusdam iusto neque, recusandae voluptatum vitae sed impedit. Animi minus veritatis, odit ipsam quaerat quia sit repellat tempora. Dolores ducimus iure at laudantium consectetur amet non? Quas sunt quis nobis aliquid fuga beatae neque in incidunt asperiores necessitatibus.</p>
+            <a target="_blank" href="#" class="button">Explore Now</a>
+            <p>Scroll down to more about us.</p>
+        </div>
+        <div class="flexible">
+            <img src="images/mamun-pp.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
