--- a/index.html
+++ b/index.html
@@ -22,5 +22,25 @@
             <img src="images/mamun-pp.png" alt="">
         </div>
     </section>
+    <section class="mission">
+        <h1 class="mTitle">My Mission in <span>2022</span></h1>
+        <div class="missionContainer">
+            <div class="missionChield c1">
+                <img src="images/illustrator-1.png" alt="" />
+                <h2>Mission</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat distinctio debitis quos deleniti, in ad exercitationem voluptas, enim esse veritatis nisi reiciendis perspiciatis, ea ullam fugit est voluptatibus quidem quam?</p>
+            </div>
+            <div class="missionChield c2">
+                <img src="images/illustrator-2.png" alt="" />
+                <h2>Vission</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat distinctio debitis quos deleniti, in ad exercitationem voluptas, enim esse veritatis nisi reiciendis perspiciatis, ea ullam fugit est voluptatibus quidem quam?</p>
+            </div>
+            <div class="missionChield c3">
+                <img src="images/illustrator-3.png" alt="" />
+                <h2>Goals</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat distinctio debitis quos deleniti, in ad exercitationem voluptas, enim esse veritatis nisi reiciendis perspiciatis, ea ullam fugit est voluptatibus quidem quam?</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
