middile part added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="header-top">
+    <section class="middhlePart">
         <div class="flexible">
             <div class="hBoder">
                 <h1>Stay Focused on </h1>
@@ -40,6 +40,27 @@
                 <h2>Goals</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat distinctio debitis quos deleniti, in ad exercitationem voluptas, enim esse veritatis nisi reiciendis perspiciatis, ea ullam fugit est voluptatibus quidem quam?</p>
             </div>
+        </div>
+    </section>
+    <section class="middhlePart codingWrap">
+        <div class="flexible codingImg">
+            <img src="images/coding.png" alt="">
+        </div>
+        <div class="flexible codingText">
+            <h1>Develop without Limits</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, inventore autem debitis praesentium placeat deleniti exercitationem velit amet dicta ullam alias, minima quibusdam iusto neque, recusandae voluptatum vitae sed impedit. Animi minus veritatis, odit ipsam quaerat quia sit repellat tempora. Dolores ducimus iure at laudantium consectetur amet non? Quas sunt quis nobis aliquid fuga beatae neque in incidunt asperiores necessitatibus.</p>
+            <a target="_blank" href="#" class="button">Explore Now</a>
+        </div>
+    </section>
+    <section class="middhlePart CommunityWrap">
+        
+        <div class="flexible codingText">
+            <h1>Know Our Global Community</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, inventore autem debitis praesentium placeat deleniti exercitationem velit amet dicta ullam alias, minima quibusdam iusto neque, recusandae voluptatum vitae sed impedit. Animi minus veritatis, odit ipsam quaerat quia sit repellat tempora. Dolores ducimus iure at laudantium consectetur amet non? Quas sunt quis nobis aliquid fuga beatae neque in incidunt asperiores necessitatibus.</p>
+            <a target="_blank" href="#" class="button">Explore Now</a>
+        </div>
+        <div class="flexible codingImg">
+            <img src="images/project.png" alt="">
         </div>
     </section>
 </body>
